# songshake

./: .dockerignore  .env.production.template  .env.template  .firebaserc  .gitignore  Dockerfile  README.md  debug_output.txt  debug_output_2.txt  debug_output_3.txt  debug_output_4.txt  debug_output_5.txt  debug_output_6.txt  debug_playlists.py  deploy.sh  firebase.json  firestore.rules  pyproject.toml  reproduce_issue.py  songs.db
.agent/workflows/: 5-commit.md  generate-brand-assets.md
.serena/: project.yml
.serena/memories/: codebase_structure.md  conventions.md  ongoing_background_jobs_ui.md  project_overview.md  song_shake_web_architecture.md  suggested_commands.md  tech_stack.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  cost-control.md  firestore-read-optimization.md  google_auth_setup.md
docs/audits/: review-findings-full-stack-2026-02-18-1030.md  review-findings-full-stack-2026-02-18-1130.md
docs/research_logs/: ai_playlist_recipes.md  auth_layer_overhaul.md  firebase_auth_evaluation.md  firebase_deployment.md  firestore_realtime_evaluation.md  job_system.md  mobile_responsive_ui.md  song_deletion_firestore_optimization.md
src/song_shake/: __init__.py  api.py  auth.py  enrichment.py  main.py  playlist.py  storage.py
src/song_shake/features/auth/: __init__.py  auth.py  dependencies.py  jwt.py  routes.py  test_routes.py  token_store.py
src/song_shake/features/enrichment/: __init__.py  album_adapter.py  downloader_adapter.py  enricher_adapter.py  enrichment.py  playlist.py  playlist_adapter.py  routes.py  song_adapter.py  storage_adapter.py  taxonomy.py  test_enrichment.py  test_playlist.py  test_routes.py
src/song_shake/platform/: __init__.py  conftest.py  firestore_adapter.py  logging_config.py  protocols.py  storage_factory.py  test_firestore_jobs_integration.py  test_firestore_songs_integration.py  test_firestore_token_integration.py  tinydb_jobs_adapter.py  tinydb_token_adapter.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.css  App.jsx  api.js  index.css
web/src/components/: Dashboard.jsx  Enrichment.jsx  Layout.jsx  Login.jsx  Results.jsx
web/src/utils/: tagIcons.js
(+36 files in other folders)
